# tauri-plugin-TinysInternalFS

./: .gitignore  Cargo.toml  LICENSE  README.md  README_zh.md  build.rs  package.json
android/: build.gradle.kts  local.properties
android/src/androidTest/java/: ExampleInstrumentedTest.kt
android/src/main/java/: FileHandle.kt  ISMPlugin.kt  InternalStorageManager.kt
android/src/test/java/: ExampleUnitTest.kt
examples/tauri-app/: package.json  vite.config.js
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/capabilities/: default.json
examples/tauri-app/src-tauri/src/: lib.rs
guest-js/: index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: check_file_exists.toml  check_is_dir.toml  check_is_file.toml  close_file.toml  close_file_all.toml  get_files_dir.toml  read_file_all.toml  read_file_immediately.toml  write_file_immediately.toml
permissions/schemas/: schema.json
src/: commands.rs  desktop.rs  error.rs  lib.rs  mobile.rs  models.rs
